new proj/src/objects/ITO_Commercial__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Is_there_a_3rd_source_of_Fin_Secur__c</fullName>
        <label>Is there a 3rd source of Financial Secur</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_there_a_4th_source_of_Fin_Secur__c</fullName>
        <label>Is there a 4th source of Financial Secur</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_there_an_add_GE_Contracting__c</fullName>
        <description>Is there an additional GE Contracting Entity?</description>
        <label>Is there an additional GE Contracting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_there_any_US_Gov_Ownership_or__c</fullName>
        <description>Is there any US Government Ownership or Funding?</description>
        <label>Is there any US Government Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_this_a_Contractual_Service_deal__c</fullName>
        <description>Is this a Contractual Services deal?</description>
        <label>Is this a Contractual Services deal?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Issue_Date2__c</fullName>
        <label>Issue Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Issue_Date3__c</fullName>
        <label>Issue Date3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Issue_Date4__c</fullName>
        <label>Issue Date4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Mobilization_Date__c</fullName>
        <label>Mobilization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Model_Number_ICAM__c</fullName>
        <label>Model Number (ICAM)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Negotiation_Type__c</fullName>
        <label>Negotiation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amendment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renegotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Work</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Notification2__c</fullName>
        <label>Notification2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Notification3__c</fullName>
        <label>Notification3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Notification4__c</fullName>
        <label>Notification4</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_Days__c</fullName>
        <description>Number of Days</description>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_Days_cp02__c</fullName>
        <description>Number of days for cure period section2</description>
        <label>Number of Days cp02</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_Days_cp03__c</fullName>
        <description>Number of Days for cure period section 03</description>
        <label>Number of Days cp03</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_Months__c</fullName>
        <label>Number of Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_Weeks__c</fullName>
        <label>Number of Weeks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_Years__c</fullName>
        <label>Number of Years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_days_cp01__c</fullName>
        <description>Number of days for cure period section 01</description>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_days_n01__c</fullName>
        <description>Number of Days for Notification section 01</description>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_days_n02__c</fullName>
        <description>Number of Days for Notification section 02</description>
        <label>Number of Days n02</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Number_of_days_n03__c</fullName>
        <description>Number of Days for section 03</description>
        <label>Number of Days n03</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_OTR_Portfolio_Region__c</fullName>
        <label>OTR Portfolio Region</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>ITO - OTR Handoffs</relationshipLabel>
        <relationshipName>ITO_Commercials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Project_Opportunity_Name_CMS__c</fullName>
        <label>Opportunity Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Project_or_Opportunity_Name_CMS__c</fullName>
        <label>Opportunity Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Provide_FX_Hedging_Recommendation__c</fullName>
        <label>Provide FX Hedging Recommendation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Provide_link_for_submit_Dataform__c</fullName>
        <label>Provide link for submitted Dataform</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Region__c</fullName>
        <label>Sales Region</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Regions_Select_all_that_apply__c</fullName>
        <label>ES Regions (Select all that apply)</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_of_Loss__c</fullName>
        <label>Risk of Loss</label>
        <picklist>
            <picklistValues>
                <fullName>After DeliveryPer Incoterm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior to Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard CS PUP6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard CS PUP7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard ES 104 rev3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard 33C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard33D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sales_Manager1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ITO_Commercials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Search_1st_Contracting_Entity_by__c</fullName>
        <label>Search 1st Contracting Entity by</label>
        <picklist>
            <picklistValues>
                <fullName>Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold ID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Search_2nd_Contracting_Entity_by__c</fullName>
        <label>Search 2nd Contracting Entity by</label>
        <picklist>
            <picklistValues>
                <fullName>Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold ID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Search_3rd_Contracting_Entity_by__c</fullName>
        <label>Search 3rd Contracting Entity by</label>
        <picklist>
            <picklistValues>
                <fullName>Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold ID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Search_4th_Contracting_Entity_by__c</fullName>
        <label>Search 4th Contracting Entity by</label>
        <picklist>
            <picklistValues>
                <fullName>Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold ID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Search_First_Contracting_Entity_By__c</fullName>
        <label>Search First Contracting Entity By</label>
        <picklist>
            <picklistValues>
                <fullName>Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoldID</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Select_ES_P_Ls_and_their_Segments__c</fullName>
        <label>Select ES P&amp;Ls and their Segments</label>
        <picklist>
            <picklistValues>
                <fullName>PS - Field Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS - Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS - TDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS - Performance Services Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS - Performance Services Steam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS - Performance Services Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS - Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS - I&amp;LES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial - Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial - Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial - AMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial - Field Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors - Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors - Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;D - Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;D - M&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;D - Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;D - Smallworld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;D - Power Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC - Bently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC - Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC - Rueter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental - Industrial Filtration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental - GTIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental - Membrane</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Select_ES_P_Ls_where_embed_deriv__c</fullName>
        <label>Select ES P&amp;Ls where embedded derivative</label>
        <picklist>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENVS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Site_Name_CMS__c</fullName>
        <label>End User Site</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Standard2__c</fullName>
        <label>GE Standard2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Standard3__c</fullName>
        <label>GE Standard3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Standard4__c</fullName>
        <label>GE Standard4</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Standard_ES_104_Audit_Rights__c</fullName>
        <description>Is contract subject to Standard ES 104 Audit Rights?</description>
        <label>Standard ES 104 Audit Rights?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Tech_Type_Select_all_that_apply__c</fullName>
        <inlineHelpText>Only Non-CS P&amp;L&apos;s are listed here. Select all that is applicable.</inlineHelpText>
        <label>Technology Type (Select all that apply)</label>
        <picklist>
            <picklistValues>
                <fullName>Fr5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7FB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9FB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Term_of_Contract__c</fullName>
        <label>Term of Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Third_Party_Financing__c</fullName>
        <description>Third Party Financing ?</description>
        <label>Third Party Financing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Title_Transfer__c</fullName>
        <label>Title Transfer</label>
        <picklist>
            <picklistValues>
                <fullName>Contractor&apos;s facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer site/facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High seas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Place of manufacture warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Place of warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port of Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard ES 104 rev3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard CS PUP6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard CS PUP7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard 33C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard33D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Total_Contract_or_PO_Price__c</fullName>
        <label>Total Contract or PO Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Turbine_Serial_Numbers_if_appli__c</fullName>
        <label>GE S/N - Equip. Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Was_Model_Locked_for_As_Sold__c</fullName>
        <label>Was Model Locked for As Sold?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Was_a_Contract_Model_required__c</fullName>
        <label>Was a Contract Model required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Which_Tax_is_Cust_Billing_Sub_to__c</fullName>
        <label>Which Tax is Customer Billing Subject to</label>
        <picklist>
            <picklistValues>
                <fullName>Withholding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local/Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_X1st_Beneficiary_Name4__c</fullName>
        <label>4th Beneficiary Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_X1st_Type_of_Financial_Security2__c</fullName>
        <label>2nd Type of Financial Security:</label>
        <picklist>
            <picklistValues>
                <fullName>Parent Company Guaranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surety Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial/Documentary Letter of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standby Letter of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Guaranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance Payment Bond/Guaranty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_X1st_Type_of_Financial_Security3__c</fullName>
        <label>3rd Type of Financial Security</label>
        <picklist>
            <picklistValues>
                <fullName>Parent Company Guaranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surety Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial/Documentary Letter of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standby Letter of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Guaranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance Payment Bond/Guaranty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_X1st_Type_of__c</fullName>
        <label>1st Type of Financial Security:</label>
        <picklist>
            <picklistValues>
                <fullName>Parent Company Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surety Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial/Documentary Letter of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standby Letter of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance Payment Bond/Guarantee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_X1st_beneficiary_name2__c</fullName>
        <label>2nd beneficiary name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_X1st_beneficiary_name3__c</fullName>
        <label>3rd beneficiary name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_X4thType_of_Financial_Security__c</fullName>
        <description>4thType of Financial Security</description>
        <label>4thType of Financial Security</label>
        <picklist>
            <picklistValues>
                <fullName>Parent Company Guaranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surety Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial/Documentary Letter of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standby Letter of Credit; Bank Guaranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance Payment Bond/Guaranty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PW_AS_Address1__c</fullName>
        <label>Address Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_AS_Address2__c</fullName>
        <label>Address Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PW_AS_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>